# recgym

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
apps/batch/: config.py
apps/batch/airflow_dags/: gold_cross_features_daily.py  gold_item_features_daily.py  gold_user_features_daily.py  silver_layer_daily.py
apps/batch/gold/: cross_features.py  item_features.py  user_features.py
apps/batch/silver/: events.py  items.py  user.py
apps/batch/utils/: spark.py
apps/features/: Dockerfile
apps/generator/: .env.example  Dockerfile  generate_events.py  pyproject.toml
apps/generator/src/: main.py
apps/generator/src/core/: bootstrap.py  config.py  models.py
apps/generator/src/data/: generator.py  producer.py  schemas.py  topics.py
apps/generator/src/domain/: models.py  schemas.py  topics.py
apps/generator/src/infra/: avro_serializer.py  generator.py  producer.py  schema_registry.py  topics.py
apps/generator/src/models/: events.py  generator_config.py  kafka_config.py  schema_config.py
apps/generator/src/observability/: instrumentation.py  logging.py  metrics.py  otlp_exporter.py  tracing.py
apps/ingestion/: Dockerfile
apps/ingestion/src/: main.py
apps/ingestion/src/core/: bootstrap.py  config.py
apps/ingestion/src/data/: consumer.py  s3_sink.py
apps/ingestion/src/infra/: connect_client.py  lakehouse_manager.py  metrics.py
apps/ingestion/src/service/: ingestion_service.py
apps/realtime/: Dockerfile
apps/realtime/src/: main.py
apps/realtime/src/core/: bootstrap.py  config.py
apps/realtime/src/infra/: kafka.py  redis_writer.py
apps/realtime/src/job/: item_features_job.py
apps/realtime/src/jobs/: item_features_job.py  user_features_job.py
batch/gold/: cross_features.py
batch/silver/: items.py
feast/: feature_store.yaml
feast/data_sources/: item_batch_source.py  user_batch_source.py
feast/features/: entities.py  item_features.py  user_features.py
feast_store/: data_source.py  entities.py  feature_store.yaml  materialize_offline.py
feast_store/feature_views.py/: cross_features.py  item_features.py  user_features.py
features/feast/: feature_store.yaml
features/feast/feature_repo/: __init__.py  entities.py  item_features.py  user_features.py
features/feast/repo/: __init__.py  item_features.py  user_features.py
features_spec/: feature_catalog.yaml
infra/: docker-compose.yml  mlflow.Dockerfile  prometheus.yml
infra/kafka-connect/: Dockerfile
infra/loki/: config.yml
infra/otel/: config.yaml
infra/promtail/: config.yml
infra/schemas/: ItemFeatureUpdate.avsc  RetailEvent.avsc  UserFeatureUpdate.avsc
infra/spark/: Dockerfile
libs/: __init__.py  base.py  config.py
libs/models/: events.py  realtime_features.py
libs/observability/: __init__.py  instrumentation.py  logging.py  metrics.py  otlp_exporter.py  tracing.py
pipeline/batch/: config.py
pipeline/batch/gold/: item_features.py  user_features.py
pipeline/batch/silver/: events.py  user.py
pipeline/batch/utils/: __init__.py  spark.py
pipeline/realtime/infra/: utils.py
pipeline/realtime/jobs/: user_features_job.py
