[project]
name = "recgym"
version = "0.1.0"
description = "Local production-grade recommendation system"
authors = [{ name = "Aman Kumar" }]
requires-python = ">=3.11"
dependencies = [
    "confluent-kafka = ^2.4.0",
    "fastavro = ^1.9.0",
]

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
strict = true
ignore_missing_imports = true
