[tool.poetry]
name = "recgym"
version = "0.1.0"
description = "RecGym monorepo: real-time recommendation system with Kafka, Spark/Flink feature pipelines, observability, and multi-service architecture."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "libs" },
    { include = "apps" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core Config & Models
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"

# Observability (OTEL)
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-exporter-otlp-proto-grpc = "*"
opentelemetry-exporter-otlp-proto-http = "*"
opentelemetry-semantic-conventions = "*"
opentelemetry-instrumentation = "*"

# Logging
structlog = "*"

# Kafka + Avro
confluent-kafka = "*"
fastavro = "*"

# Storage / S3 (MinIO)
boto3 = "*"
pyarrow = "*"

# Utilities
orjson = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
mypy = "*"
ruff = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
