[tool.poetry]
name = "recgym"
version = "0.1.0"
description = "RecGym monorepo: real-time recommendation system with Kafka, Spark/Flink pipelines, observability, and multi-service architecture."
authors = ["Your Name <you@example.com>"]
readme = "README.md"

packages = [
    { include = "libs" },
    { include = "apps" }
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"

# Core config
pydantic = "*"
pydantic-settings = "*"
python-dotenv = "*"
requests = "*"

# Observability (OTEL)
opentelemetry-api = "*"
opentelemetry-sdk = "*"
opentelemetry-exporter-otlp = "*"
opentelemetry-exporter-otlp-proto-grpc = "*"
opentelemetry-exporter-otlp-proto-http = "*"
opentelemetry-semantic-conventions = "*"
opentelemetry-instrumentation = "*"

# Logging
structlog = "*"

# Kafka
confluent-kafka = "*"

# Avro + Arrow
fastavro = "*"
pyarrow = "*"

# S3 / MinIO
boto3 = "*"

# Feature engineering + Realtime
pyflink = "*"       
redis = "*"    

# Utilities
orjson = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pytest-asyncio = "*"
mypy = "*"
ruff = "*"
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
