[project]
name = "recgym-generator"
version = "0.1.0"
description = "Synthetic event generator microservice for RecGym"
requires-python = ">=3.11"
authors = [{ name = "Your Name" }]
dependencies = [
    "pydantic",
    "confluent-kafka[avro]",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "opentelemetry-exporter-otlp",
]

[tool.black]
line-length = 100

[tool.ruff]
select = ["E", "F"]
ignore = ["E501"]

[tool.mypy]
strict = true
